updated fa icons

--- a/static/description/index.html
+++ b/static/description/index.html
@@ -235,7 +235,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="feature-card bg-white rounded-4 p-5 shadow-sm">
                         <div class="feature-icon">
-                            <i class="fa fa-microphone-alt"></i>
+                            <i class="fa fa-play"></i>
                         </div>
                         <h3 class="h4 mb-3">Voice Interaction</h3>
                         <p class="text-muted mb-0">
@@ -274,7 +274,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="feature-card bg-white rounded-4 p-5 shadow-sm">
                         <div class="feature-icon">
-                            <i class="fa fa-mobile-alt"></i>
+                            <i class="fa fa-mobile"></i>
                         </div>
                         <h3 class="h4 mb-3">Fully Responsive</h3>
                         <p class="text-muted mb-0">
@@ -512,7 +512,7 @@
                         <div class="d-flex align-items-center mb-3">
                             <div class="me-3">
                                 <div class="rounded-circle bg-info bg-opacity-10 text-white d-flex align-items-center justify-content-center" style="width: 48px; height: 48px;">
-                                    <i class="fa-solid fa-brain"></i>
+                                    <i class="fa fa-android"></i>
                                 </div>
                             </div>
                             <h3 class="h5 mb-0">AI Provider</h3>
